# skc-research

./: Dockerfile  README.md  pyproject.toml  requirements.txt
api/: app.py
backend/: Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/agent/: app.py  graph.py  utils.py
backend/src/agent/: app.py  configuration.py  graph.py  test_health.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  global.css
frontend/src/components/: AnalysisCard.tsx  ChatMessagesView.tsx  InputForm.tsx  UploadWithProgress.tsx  WelcomeScreen.tsx
