[tool.poetry]
name = "agent"
version = "0.0.1"
description = "Backend for the LangGraph agent"
authors = ["Philipp Schmid <schmidphilipp1995@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langgraph = ">=0.2.6"
langchain = ">=0.3.19"
langchain-google-genai = "*"
python-dotenv = ">=1.0.1"
langgraph-sdk = ">=0.1.57"
langgraph-cli = "*"
langgraph-api = "*"
fastapi = "*"
google-genai = "*"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
